--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,17 @@ body {
 .img-medium {
     height: 300px;
 }
+ .container{
+        font-family: sans-serif;
+        margin: 0 auto;
+        max-width: 800px;
+        color: #062e8c;
+        padding-top: 80px;
+        padding-left: 20px;
+        padding-right: 20px;
+        }
+        .header{
+        font-weight: bold;
+        color: green;
+        }
 
