--- a/ui/style.css
+++ b/ui/style.css
@@ -2,6 +2,7 @@ body {
     font-family: sans-serif;
     background-color: white;
     margin-top: 75px;
+    margin-left : 50px;
 }
 
 .center {
@@ -17,7 +18,7 @@ body {
 }
 
 .img-medium {
-    height: 300px;
+    height: 100px;
     margin-left : 50px;
 }
  .container{
