--- a/ui/style.css
+++ b/ui/style.css
@@ -5,6 +5,18 @@ body {
     margin-left : 50px;
 }
 
+.nav a {
+  color: #5a5a5a;
+  font-size: 11px;
+  font-weight: bold;
+  padding: 14px 10px;
+  text-transform: uppercase;
+}
+
+.nav li {
+  display: inline;
+}
+
 .center {
     text-align: center;
 }
