--- a/ui/style.css
+++ b/ui/style.css
@@ -14,6 +14,18 @@
   display: inline;
 }
 
+.jumbotron .container {
+  position: relative;
+  top:100px;
+}
+
+.jumbotron h1 {
+  color: #fff;
+  font-size: 48px;  
+  font-family: 'Shift', sans-serif;
+  font-weight: bold;
+}
+
 .jumbotron p {
   font-size: 20px;
   color: #fff;
