--- a/ui/style.css
+++ b/ui/style.css
@@ -14,6 +14,13 @@
   display: inline;
 }
 
+jumbotron {
+  background-image: url('http://files.fbcoverstreet.com/content/Xaclon4AcRnhURLOuOD84vB7qONAFkzOeDZSRQwCOd5Ebulisy8fisylYf4aa452.jpg');
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .jumbotron .container {
   position: relative;
 }
@@ -21,7 +28,6 @@
 .jumbotron h1 {
   color: #fff;
   font-size: 48px; 
-  background-image: url('http://files.fbcoverstreet.com/content/Xaclon4AcRnhURLOuOD84vB7qONAFkzOeDZSRQwCOd5Ebulisy8fisylYf4aa452.jpg');
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
