--- a/ui/style.css
+++ b/ui/style.css
@@ -14,7 +14,7 @@
   display: inline;
 }
 
-jumbotron {
+.jumbotron {
   background-image: url('http://files.fbcoverstreet.com/content/Xaclon4AcRnhURLOuOD84vB7qONAFkzOeDZSRQwCOd5Ebulisy8fisylYf4aa452.jpg');
   height: 500px;
   background-repeat: no-repeat;
