--- a/ui/style.css
+++ b/ui/style.css
@@ -74,7 +74,7 @@
   font-size: 18px;
   font-weight: bold;
 }
- .container{
+ .contain{
         font-family: sans-serif;
         margin: 0 auto;
         max-width: 800px;
