--- a/ui/style.css
+++ b/ui/style.css
@@ -1,95 +1,4 @@
-
-.row {
-    padding: 40px;
-    margin-left: 30px;
+body {
+    background-image : url(/ui/Sherlock.jpg);
 }
-.nav a {
-  color: #5a5a5a;
-  font-size: 11px;
-  font-weight: bold;
-  padding: 14px 10px;
-  text-transform: uppercase;
-}
-
-.nav li {
-  display: inline;
-}
-
-.jumbotron {
-  background-image: url('http://files.fbcoverstreet.com/content/1uz5AmgBa14Nqvg9XT2EO5xiI73DYgNt2Y9C6zfFhPGMpInpLcr9aOE57QvDtcl3.jpg');
-  height: 350px;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.jumbotron .container {
-  position: relative;
-}
-
-.jumbotron h1 {
-  color: #fff;
-  font-size: 48px; 
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-}
-
-.jumbotron p {
-  font-size: 20px;
-  color: #fff;
-}
-
-.center {
-    text-align: center;
-}
-
-.footer {
-    text-align: center;
-}
-
-.text-big {
-    font-size: 300%;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.img-medium {
-    height: 75px;
-    margin-left : 50px;
-    width: 100px;
-}
-
-.learn-more 
-{
-    color: #e24216;
-}
-.learn-mor {
-color:#06ad36 ;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.learn-mor {
-  background-color: #f7f7f7;
-}
-
-.learn-mor h3 {
-  font-family: 'Shift', sans-serif;
-  font-size: 18px;
-  font-weight: bold;
-}
- .container{
-        font-family: sans-serif;
-        margin: 0 auto;
-        max-width: 800px;
-        color: ;
-        padding-top: 60px;
-        padding-left: 20px;
-        padding-right: 20px;
-        }
-        .header{
-        font-weight: bold;
-        color: green;
-        }
 
