--- a/ui/style.css
+++ b/ui/style.css
@@ -1,4 +1,4 @@
 body {
-    background-image : url('/ui/Sherlock.jpg');
+    background-image : url('http://thesmashable.com/wp-content/uploads/2012/07/the_dark_knight_rises_hd_wallpapers_1920x1020_desktop_backgrounds_latest.jpg');
 }
 
