--- a/ui/style.css
+++ b/ui/style.css
@@ -8,7 +8,7 @@ html {
   background-size: cover;
 }
 
-* {
+/* * {
 	margin:0;
 	padding:0;
 	box-sizing:border-box;
@@ -19,7 +19,7 @@ html {
 	-o-font-smoothing:antialiased;
 	font-smoothing:antialiased;
 	text-rendering:optimizeLegibility;
-}
+}*/
 
 body {
 	font-family:"Open Sans", Helvetica, Arial, sans-serif;
