[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 fieldset {
-	border: medium none !important;
+	border: medium none ;
 	margin: 0 0 10px;
 	min-width: 100%;
 	padding: 0;
