--- a/ui/registerstyle.css
+++ b/ui/registerstyle.css
@@ -30,36 +30,36 @@ body {
 	position:relative;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="password"], #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
+#register input[type="text"], #register input[type="email"], #register input[type="password"], #register button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
-#contact {
+#register {
 	background:#F9F9F9;
 	padding:25px;
 	margin:50px 0;
 }
 
-#contact h3 {
+#register h3 {
 	color: #F96;
 	display: block;
 	font-size: 30px;
 	font-weight: 400;
 }
 
-#contact h4 {
+#register h4 {
 	margin:5px 0 15px;
 	display:block;
 	font-size:13px;
 }
 
 fieldset {
-	border: medium none !important;
+	border: medium none ;
 	margin: 0 0 10px;
 	min-width: 100%;
 	padding: 0;
 	width: 100%;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
+#register input[type="text"], #register input[type="email"], #register input[type="password"] {
 	width:100%;
 	border:1px solid #CCC;
 	background:#FFF;
@@ -67,20 +67,14 @@ fieldset {
 	padding:10px;
 }
 
-#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+#register input[type="text"]:hover, #register input[type="email"]:hover, #register input[type="password"]:hover{
 	-webkit-transition:border-color 0.3s ease-in-out;
 	-moz-transition:border-color 0.3s ease-in-out;
 	transition:border-color 0.3s ease-in-out;
 	border:1px solid #AAA;
 }
 
-#contact textarea {
-	height:100px;
-	max-width:100%;
-  resize:none;
-}
-
-#contact button[type="submit"] {
+#register button[type="submit"] {
 	cursor:pointer;
 	width:100%;
 	border:none;
@@ -91,16 +85,16 @@ fieldset {
 	font-size:15px;
 }
 
-#contact button[type="submit"]:hover {
+#register button[type="submit"]:hover {
 	background:#09C;
 	-webkit-transition:background 0.3s ease-in-out;
 	-moz-transition:background 0.3s ease-in-out;
 	transition:background-color 0.3s ease-in-out;
 }
 
-#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+#register button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
 
-#contact input:focus, #contact textarea:focus {
+#register input:focus, {
 	outline:0;
 	border:1px solid #999;
 }
