--- a/ui/registerstyle.css
+++ b/ui/registerstyle.css
@@ -94,7 +94,7 @@ fieldset {
 
 #register button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
 
-#register input:focus, {
+#register input:focus {
 	outline:0;
 	border:1px solid #999;
 }
