--- a/ui/style.css
+++ b/ui/style.css
@@ -39,7 +39,15 @@ body {
 
 #login input[type="text"], #login input[type="password"], #login input[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
+#register input[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
+
 #login {
+	background:#F9F9F9;
+	padding:25px;
+	margin:50px 0;
+}
+
+#register {
 	background:#F9F9F9;
 	padding:25px;
 	margin:50px 0;
@@ -55,6 +63,13 @@ body {
 }
 
 #login h4 {
+	margin:5px 0 15px;
+	display:block;
+	font-size:13px;
+	text-align:center;
+}
+
+#register h4 {
 	margin:5px 0 15px;
 	display:block;
 	font-size:13px;
@@ -101,6 +116,17 @@ fieldset {
 	font-size:15px;
 }
 
+#register input[type="submit"] {
+	cursor:pointer;
+	width:100%;
+	border:none;
+	background:#0CF;
+	color:#FFF;
+	margin:0 0 5px;
+	padding:10px;
+	font-size:15px;
+}
+
 #login input[type="submit"]:hover {
 	background:#09C;
 	-webkit-transition:background 0.3s ease-in-out;
@@ -108,7 +134,17 @@ fieldset {
 	transition:background-color 0.3s ease-in-out;
 }
 
+#register input[type="submit"]:hover {
+	background:#09C;
+	-webkit-transition:background 0.3s ease-in-out;
+	-moz-transition:background 0.3s ease-in-out;
+	transition:background-color 0.3s ease-in-out;
+}
+
+
 #login input[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+#register input[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
 
 #login input:focus, #login textarea:focus {
 	outline:0;
