[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -120,7 +120,7 @@ fieldset {
 	cursor:pointer;
 	width:100%;
 	border:none;
-	background:#0CF;
+	background:#06d849;
 	color:#FFF;
 	margin:0 0 5px;
 	padding:10px;
@@ -135,7 +135,7 @@ fieldset {
 }
 
 #register input[type="submit"]:hover {
-	background:#09C;
+	background:#03842c;
 	-webkit-transition:background 0.3s ease-in-out;
 	-moz-transition:background 0.3s ease-in-out;
 	transition:background-color 0.3s ease-in-out;
