[imad-console] Updates ui/registerstyle.css

--- a/ui/registerstyle.css
+++ b/ui/registerstyle.css
@@ -81,7 +81,7 @@ fieldset {
 	cursor:pointer;
 	width:100%;
 	border:none;
-	background:#0CF;
+	background:#06d849;
 	color:#FFFFFF;
 	margin:0 0 5px;
 	padding:10px;
@@ -89,7 +89,7 @@ fieldset {
 }
 
 #register button[type="submit"]:hover {
-	background:#09C;
+	background:#03842c;
 	-webkit-transition:background 0.3s ease-in-out;
 	-moz-transition:background 0.3s ease-in-out;
 	transition:background-color 0.3s ease-in-out;
