--- a/ui/style.css
+++ b/ui/style.css
@@ -20,7 +20,7 @@ body {
 	font-weight:300;
 	font-size: 12px;
 	line-height:30px;
-	background-color :#12c60b;
+	background-image : url('http://thesmashable.com/wp-content/uploads/2012/07/the_dark_knight_rises_hd_wallpapers_1920x1020_desktop_backgrounds_latest.jpg');
 	
 }
 
