--- a/ui/style.css
+++ b/ui/style.css
@@ -15,12 +15,19 @@ html {
 	text-rendering:optimizeLegibility;
 }
 
+html { 
+  background: url('http://thesmashable.com/wp-content/uploads/2012/07/the_dark_knight_rises_hd_wallpapers_1920x1020_desktop_backgrounds_latest.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
 	font-family:"Open Sans", Helvetica, Arial, sans-serif;
 	font-weight:300;
 	font-size: 12px;
 	line-height:30px;
-	background-image : url('http://thesmashable.com/wp-content/uploads/2012/07/the_dark_knight_rises_hd_wallpapers_1920x1020_desktop_backgrounds_latest.jpg');
 	
 }
 
