--- a/ui/registerstyle.css
+++ b/ui/registerstyle.css
@@ -16,9 +16,9 @@ html {
 
 html { 
   background: url('http://cdn.pcwallart.com/images/interstellar-poster-wallpaper-1.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
+  /*-webkit-background-size: cover;
   -moz-background-size: cover;
-  -o-background-size: cover;
+  -o-background-size: cover;*/
   background-size: cover;
 }
 
