--- a/ui/registerstyle.css
+++ b/ui/registerstyle.css
@@ -15,10 +15,10 @@ html {
 }
 
 html { 
-  background: url('http://cdn.pcwallart.com/images/interstellar-poster-wallpaper-1.jpg') no-repeat center center fixed; 
-  /*-webkit-background-size: cover;
+  /*background: url('http://cdn.pcwallart.com/images/interstellar-poster-wallpaper-1.jpg') no-repeat center center fixed; */
+  background: url('https://isracalzadolopez.files.wordpress.com/2014/11/interstellar.jpeg') no-repeat center center fixed; 
   -moz-background-size: cover;
-  -o-background-size: cover;*/
+  -o-background-size: cover;
   background-size: cover;
 }
 
