--- a/ui/registerstyle.css
+++ b/ui/registerstyle.css
@@ -21,6 +21,8 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width:100%;
+  height:100%;
 }
 
 body {
