--- a/ui/browse.css
+++ b/ui/browse.css
@@ -20,8 +20,9 @@ html {
      left: 30%;
      font-size: 18px;
      color: #ef631c;
+     margin-top: 130px;
+    }
     
-}
 .moviesearch {
 	
 	width: 600px;
