[imad-console] Updates ui/browse.css

--- a/ui/browse.css
+++ b/ui/browse.css
@@ -13,7 +13,7 @@ html {
   background-size: cover;
 }
 
-h1{
+.search{
     position: absolute;
      font-family: Montserrat, sans-serif;
      font-weight: bold;
