[imad-console] Updates ui/browse.css

--- a/ui/browse.css
+++ b/ui/browse.css
@@ -18,7 +18,7 @@ html {
      font-family: Montserrat, sans-serif;
      font-weight: bold;
      top: 120px;
-     left: %30;
+     left: 30%;
      font-size: 25px;
      color: #ef631c;
     }
