--- a/ui/browse.css
+++ b/ui/browse.css
@@ -23,7 +23,7 @@ html {
      color: #ef631c;
     }
     
-.moviesearch {
+.moviesearch a{
 	
 	width: 600px;
 	height: 50px;
@@ -38,6 +38,7 @@ html {
     margin-right: 0;
     color: white;
     outline: none;
+    text-decoration: none;
     background: #1f7f5c;
     float: left;
     box-sizing: border-box;
@@ -70,7 +71,7 @@ ul{
 	position: absolute;
 	top: 270px;
 	left:27%;
-	/*width: 600px;*/
+    width: 600px;
 	height: auto;
 	opacity: 1;
 	transition: all 0.1s;
