[imad-console] Updates ui/browse.css

--- a/ui/browse.css
+++ b/ui/browse.css
@@ -46,6 +46,10 @@ html {
 
 }
 
+.livesearch {
+    text-decoration : none;
+    color:#FFFFFF;
+}
 ::-webkit-input-placeholder { /* WebKit browsers */
     color: white;
 }
