--- a/ui/registerstyle.css
+++ b/ui/registerstyle.css
@@ -57,6 +57,16 @@ body {
 	text-align: center;
 }
 
+p{
+	color: #000000;
+	display: block;
+	font-size: 15px;
+	font-weight: 400;
+	font-weight: bold;
+	text-align: center;
+
+}
+
 #register h4 {
 	margin:5px 0 15px;
 	display:block;
