--- a/ui/browse.css
+++ b/ui/browse.css
@@ -5,8 +5,8 @@
     padding: 0;
 }
 
-.mainbody { 
-  background: url('http://www.wallpapers4u.org/wp-content/uploads/quentin_tarantino_actor_director_jacket_pistol_pants_celebrity_hollywood_black_and_white_18775_1920x1080.jpg') no-repeat center center fixed; 
+html { 
+  background: url('/ui/quentin.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -17,7 +17,7 @@
   background: #232323;
   height: 40px;
   display: inline-block;
-  width:1300px;
+  width:1400px;
   position:relative;
 }
 
@@ -47,10 +47,11 @@
      position: absolute;
      font-family: Montserrat, sans-serif;
      font-weight: bold;
-     top: 150px;
-     left: 30%;
+     top: 180px;
+     left: 28%;
      font-size: 37px;
      color: #ef631c;
+     position:relative;
     }
     
 .moviesearch {
