--- a/ui/style.css
+++ b/ui/style.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
 
 
 
@@ -31,12 +32,14 @@ body {
 	
 }
 
+
 .container {
 	max-width:400px;
 	width:100%;
 	margin:0 auto;
 	position:relative;
 }
+
 
 #login input[type="text"], #login input[type="password"], #login input[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
@@ -61,7 +64,9 @@ body {
 	font-weight: 400;
 	text-align: center;
 	font-weight: bold;
+	font-family: Montserrat, sans-serif;
 }
+
 
 #login h4 {
 	margin:5px 0 15px;
