--- a/ui/recent.css
+++ b/ui/recent.css
@@ -14,7 +14,7 @@ html {
   background: #0695a8;
   height: 40px;
   display: inline-block;
-  width:1300px;
+  width:100%;
   position:relative;
 }
 
