[imad-console] Updates ui/write-review.css

--- a/ui/write-review.css
+++ b/ui/write-review.css
@@ -67,7 +67,7 @@ h3{
 
 textarea{
 	margin-top: 5px;
-	font-family: 'News Cycle', sans-serif;
+	font-family: 'Signika Negative', sans-serif;
 	width: 800px;
 	height: 400px;
 	font-weight: bold;
